# opencv-starter-app

./: CMakeLists.txt  README.md  main.cpp
