cmake_minimum_required(VERSION 3.10.0)
project(opencv-starter-app)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
add_executable(main main.cpp)
target_link_libraries(main ${OpenCV_LIBS})
